# circuit-breaker

./: INTEGRATION_GUIDE.md  README.md  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: ci.yml
src/circuit_breaker/: __init__.py  circuit_breaker.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py
